css/style-cutom.css
/* ... */
.d-lgx-block {
  display: block;
}
.d-lgx-none {
  display: none;
}
@media screen and (max-width: 991px) {
  .px-xm-0 {
    padding-left: 0px !important;
    padding-right: 0px !important;
  }
  .d-smx-none {
    display: none !important;
  }

  .container-fluid,
  .container-sm,
  .container-md,
  .container-lg,
  .container-xl {
    width: 100%;
    padding-right: 0px !important;
    padding-left: 0px !important;
    margin-right: auto;
    margin-left: auto;
  }
  .banner-login-body-xm {
    padding-top: 15px;
    padding-bottom: 15px;
    position: unset !important;
    width: 100% !important;
    border-radius: 0px !important;
  }
  .contentThird-xm .col {
    margin-bottom: 10px !important;
    padding: 0px 6px;
  }
  #carouselExampleIndicators2 .carousel-control-prev-icon {
    width: 45px !important;
    height: 20px !important;
    top: 60% !important;
  }
  #carouselExampleIndicators2 .carousel-control-next-icon {
    width: 45px !important;
    height: 20px !important;
    top: 60% !important;
  }
}
.d-md-none {
  display: none !important;
}
@media (min-width: 768px) and (max-width: 1368px) {
  .navbar-nav .nav-item {
    margin-right: 15px;
  }
  .brand-image-size img {
    width: 217px;
  }
  .main-slide-padding {
    margin-top: 74px;
  }
  .top-w-deal .col {
    min-height: 250px;
  }
  .top-w-deal-body {
    padding: 0 15px;
  }
}
@media screen and (max-width: 768px) {
  .d-sm-none {
    display: none !important;
  }
  .d-sm-block {
    display: block !important;
  }
  .background-white {
    padding: 55px 0px 0px;
  }
  .main-slide-padding {
    min-height: unset;
  }
  .carousel {
    height: unset;
  }

  .contentThird-xm.row {
    display: flex;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
    grid-gap: 20px;
    justify-content: center;
    margin-bottom: 20px;
  }

  .contentThird-xm .col {
    padding: 0;
    margin-bottom: 0px !important;
    min-width: calc(50% - 15px) !important;
  }

  .mystiflyStats {
    padding-bottom: 0;
  }
  section {
    padding: 75px 0;
  }
  .main-header.hea2 {
    margin: 0 auto 30px !important;
  }
  .main-header {
    font-size: 24px;
    margin-top: 45px;
    text-align: center;
    margin-bottom: 30px;
  }
  .carouselHeader {
    font-size: 24px;
    margin-bottom: 30px;
  }
  .carouselHeader small {
    font-size: 18px;
    margin: 30px auto;
  }
  .partenerships > p {
    display: flex;
    flex-wrap: wrap;
    grid-gap: 15px;
    justify-content: center;
    margin-bottom: 0;
  }
  .partenerships img {
    width: calc(50% - 15px) !important;
  }

  .deep-dive-section {
    padding-bottom: 0;
  }
  .deep-dive-section .container {
    padding: 0px 30px;
  }
  .top-w-deal {
    padding-bottom: 75px;
  }
  .top-w-deal .row {
    grid-gap: 40px 20px;
    padding: 0px 20px;
  }
  .top-w-deal .col {
    min-width: calc(50% - 30px);
    min-height: 240px;
  }
  .top-w-deal-body {
    padding: 0 15px;
  }
  .top-w-deal-body > h4 {
    margin: 0;
    font-size: 16px;
    min-height: 90px;
  }
  .top-w-deal-body p {
    font-size: 14px;
  }
  .offset-1 {
    margin: 0;
    padding: 0 10px;
  }
}

.col,
.col-1,
.col-10,
.col-11,
.col-12,
.col-2,
.col-3,
.col-4,
.col-5,
.col-6,
.col-7,
.col-8,
.col-9,
.col-auto,
.col-lg,
.col-lg-1,
.col-lg-10,
.col-lg-11,
.col-lg-12,
.col-lg-2,
.col-lg-3,
.col-lg-4,
.col-lg-5,
.col-lg-6,
.col-lg-7,
.col-lg-8,
.col-lg-9,
.col-lg-auto,
.col-md,
.col-md-1,
.col-md-10,
.col-md-11,
.col-md-12,
.col-md-2,
.col-md-3,
.col-md-4,
.col-md-5,
.col-md-6,
.col-md-7,
.col-md-8,
.col-md-9,
.col-md-auto,
.col-sm,
.col-sm-1,
.col-sm-10,
.col-sm-11,
.col-sm-12,
.col-sm-2,
.col-sm-3,
.col-sm-4,
.col-sm-5,
.col-sm-6,
.col-sm-7,
.col-sm-8,
.col-sm-9,
.col-sm-auto,
.col-xl,
.col-xl-1,
.col-xl-10,
.col-xl-11,
.col-xl-12,
.col-xl-2,
.col-xl-3,
.col-xl-4,
.col-xl-5,
.col-xl-6,
.col-xl-7,
.col-xl-8,
.col-xl-9,
.col-xl-auto {
  position: relative;
  width: 100%;
  padding-right: 10px;
  padding-left: 10px;
}
.kt-scrolltop--on .kt-scrolltop {
  opacity: 1;
  -webkit-animation: kt-scrolltop-show-animation 0.4s ease-out 1;
  animation: kt-scrolltop-show-animation 0.4s ease-out 1;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
@media (max-width: 1024px) {
  .kt-scrolltop {
    bottom: 30px;
    right: 15px;
  }
}

.kt-scrolltop {
  display: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 40px;
  height: 40px;
  position: fixed;
  bottom: 40px;
  right: 20px;
  cursor: pointer;
  z-index: 100;
  background-color: #ffc12d;
  -webkit-box-shadow: 0 0 15px 1px rgba(69, 65, 78, 0.2);
  box-shadow: 0 0 15px 1px rgba(69, 65, 78, 0.2);
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  border-radius: 4px;
}
.count-icon {
  display: flex;
  font-size: 28px;
  font-weight: bold;
  margin-bottom: 0;
  color: #161a48;
}
/* ===================animations=========================== */

.animatable {
  visibility: hidden;
  -webkit-animation-play-state: paused;
  -moz-animation-play-state: paused;
  -ms-animation-play-state: paused;
  -o-animation-play-state: paused;
  animation-play-state: paused;
}

.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 400ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.animated.infinite {
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.animated.delay-1s {
  -webkit-animation-delay: 300ms;
  animation-delay: 300ms;
}

.animated.delay-2s {
  -webkit-animation-delay: 500ms;
  animation-delay: 500ms;
}

.animated.delay-3s {
  -webkit-animation-delay: 700ms;
  animation-delay: 700ms;
}

.animated.delay-4s {
  -webkit-animation-delay: 900ms;
  animation-delay: 900ms;
}

.animated.delay-5s {
  -webkit-animation-delay: 1100ms;
  animation-delay: 1100ms;
}

.animated.delay-6s {
  -webkit-animation-delay: 1300ms;
  animation-delay: 1300ms;
}
/* ... */

